# PRG2-Template

./: .clang-format  CMakeLists.txt  main.c
